--- a/AguaPotable.ipynb
+++ b/AguaPotable.ipynb
@@ -41,7 +41,7 @@
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.metrics import accuracy_score"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -52,7 +52,7 @@
       "source": [
         "df = pd.read_csv('drinking_water_potability.csv')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -68,7 +68,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -202,7 +202,7 @@
       "source": [
         "df.shape"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -229,7 +229,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -407,7 +407,7 @@
         "for column in df.columns:\n",
         "    print(\"{} \\t\\t {} valores únicos\".format(column, len( df[column].unique() ) ))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,7 +442,7 @@
         "    print(\"{} \\t\\t {:.1f}% valores nulos\".format(column, (df[column].isnull().sum() / len(df)) * 100 ))\n",
         "\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,6 +473,12 @@
         "outputId": "cdf83b7f-e662-4918-983a-6d9023d35e2b"
       },
       "source": [
+        "'''\n",
+        "' Desbalanceo en los datos\n",
+        "'\n",
+        "' Existe cierto desbalanceo en los datos, habiendo\n",
+        "' más datos de clase potable.\n",
+        "'''\n",
         "sizes = df['Potability'].value_counts().tolist()\n",
         "labels = 'Potable', 'No Potable'\n",
         "\n",
@@ -483,7 +489,7 @@
         "ax1.axis('equal')\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -519,7 +525,7 @@
         "sns.heatmap(df.corr(),annot=True)\n",
         "plt.title('Correlation Matrix',fontsize=20)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -570,7 +576,7 @@
         "    plt.title('Diagrama de caja: {}'.format(column), fontsize=20)\n",
         "\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -749,7 +755,7 @@
         "tri_mean_1 = df[df['Potability'] == 1]['Trihalomethanes'].mean(skipna=True)\n",
         "df.loc[ (df['Potability'] == 1) & (df['Trihalomethanes'].isna()), 'Trihalomethanes' ] = tri_mean_1\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -765,7 +771,7 @@
         "for column in df.columns:\n",
         "    print(\"{} \\t\\t {:.1f}% valores nulos\".format(column, (df[column].isnull().sum() / len(df)) * 100 ))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -794,7 +800,7 @@
         "X = df.iloc[ : , :-1]\n",
         "y = df.iloc[ : , -1]"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -805,7 +811,7 @@
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=97)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -821,7 +827,7 @@
         "print(\"Train: \",X_train.shape)\n",
         "print(\"Test: \",X_test.shape)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -849,7 +855,7 @@
         "X_train = scaler.fit_transform(X_train)\n",
         "X_test = scaler.transform(X_test)\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -887,6 +893,12 @@
         "\n",
         "kernel = 1.0 * RBF(1.0)\n",
         "\n",
+        "'''\n",
+        "' Debido a que vamos a realizar una análisis sencillo utilizaremos\n",
+        "' clasificadores comunes en el aprendizaje automático con parámetros\n",
+        "' por defecto. Además, solo se calcula la métrica de Accuracy.\n",
+        "'''\n",
+        "\n",
         "# Parametros por defecto de Sklearn\n",
         "models = [SGDClassifier(max_iter=1000, tol=1e-3),\n",
         "          KNeighborsClassifier(n_neighbors=3),\n",
@@ -908,7 +920,7 @@
         "\n",
         "  models_acc.append(accuracy_score(y_test, pred))\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -931,7 +943,7 @@
         "    'Name': models_names\n",
         "})"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -945,12 +957,17 @@
         "outputId": "7a1f36e5-7379-498a-b0a0-3c17b366e36a"
       },
       "source": [
+        "'''\n",
+        "' Como se puede observar el algoritmo de AdaBoost obtiene el mejor resultados,\n",
+        "' seguido muy cerca de DecisionTree.\n",
+        "'''\n",
+        "\n",
         "plt.figure(figsize=(10, 5))\n",
         "sns.barplot(df_res['Accuracy'], df_res['Name'])\n",
         "plt.xlabel('Accuracy', fontsize=15)\n",
         "plt.ylabel('Name', fontsize=15);"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
